--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,11 +37,11 @@
         </ul>
 
         <ul class="nav navbar-nav">
-          <li ><%= link_to "All users", usr_users_path %></li>
+          <li ><%= link_to "All users", usr_contacts_path %></li>
         </ul>
 
         <ul class="nav navbar-right">
-          <li ><%= link_to "Create User", new_usr_user_path %></li>
+          <li ><%= link_to "Create User", new_usr_contact_path %></li>
         </ul>
 
         <ul class="nav navbar-right">
